--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+    <head>
+        <title>color removerizer!!!</title>
+    </head>
     <body>
         <h1>color removerizer</h1>
         <input type="text" placeholder="username" id="username">
